--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"main": "index.js",
 	"scripts": {
 		"dev": "webpack --progress --colors --watch --mode=development",
-		"build": "webpack --progress -p --colors --mode=production"
+		"build": "webpack --progress -p --colors --mode=production",
+		"dev-build": "webpack --progress --colors --mode=development"
 	},
 	"keywords": [],
 	"author": "Ewart",
