--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@types/node": "^11.13.0",
 		"autoprefixer": "^9.6.0",
 		"babel-loader": "^8.2.2",
+		"breakpoint-sass": "^2.7.1",
 		"css-loader": "^3.6.0",
 		"jquery": "^3.3.1",
 		"mini-css-extract-plugin": "^0.9.0",
